--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-jwt": "^1.1.2",
     "react-moment": "^1.1.1",
+    "react-qr-code": "^1.0.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
