--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
-    "eslint-plugin-react": "^7.23.1",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "querystring": "^0.2.1",
@@ -57,6 +56,7 @@
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1"
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.1"
   }
 }
